--- a/DFN/LectureView.xib
+++ b/DFN/LectureView.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<int key="IBDocument.SystemTarget">1280</int>
+		<string key="IBDocument.SystemVersion">10J869</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.35</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIView</string>
@@ -45,8 +45,6 @@
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
-						<string key="NSReuseIdentifierKey">_NS:190</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -79,7 +77,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="348314720"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<float key="IBUIAlpha">0.89999997615814209</float>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -116,7 +113,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1053678387"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="63226890"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -135,7 +131,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="457825599"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<float key="IBUIAlpha">0.89999997615814209</float>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -159,7 +154,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="779921712"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<float key="IBUIAlpha">0.89999997615814209</float>
 						<int key="IBUITag">2</int>
@@ -184,7 +178,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="513228450"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<float key="IBUIAlpha">0.89999997615814209</float>
 						<int key="IBUITag">2</int>
@@ -209,7 +202,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="574153768"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<float key="IBUIAlpha">0.89999997615814209</float>
 						<int key="IBUITag">3</int>
@@ -234,7 +226,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="682770889"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<float key="IBUIAlpha">0.89999997615814209</float>
 						<int key="IBUITag">3</int>
@@ -259,7 +250,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="51496714"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -293,7 +283,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="577583590"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -318,7 +307,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1066469546"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -349,7 +337,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="346253700"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -371,7 +358,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="176314841"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -404,7 +390,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="77700583"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -425,7 +410,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="138959644"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -462,7 +446,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="702624350"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -484,7 +467,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="488842365"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">2</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -513,7 +495,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="845703726"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -535,7 +516,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="37545517"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -558,7 +538,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="655450829"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">3</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -581,7 +560,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="117102454"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">2</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -607,7 +585,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="108238455"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -629,7 +606,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="270859311"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -653,7 +629,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="846610796"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -675,7 +650,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="729125166"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">3</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -701,7 +675,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="351664532"/>
-						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">3</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -723,7 +696,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="343486892"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -744,8 +716,6 @@
 						<string key="NSFrame">{{20, 850}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -775,7 +745,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="207102666"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -798,7 +767,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="261655017"/>
-						<string key="NSReuseIdentifierKey">_NS:328</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -819,7 +787,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="725390173"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">3</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -835,7 +802,6 @@
 						<reference key="NSSuperview" ref="361054765"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="722862629"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="63226890"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUITag">2</int>
@@ -853,7 +819,6 @@
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="805493211"/>
-				<string key="NSReuseIdentifierKey">_NS:196</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -1015,6 +980,14 @@
 						<reference key="destination" ref="117102454"/>
 					</object>
 					<int key="connectionID">99</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">descriptionButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="176314841"/>
+					</object>
+					<int key="connectionID">101</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -1365,7 +1338,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100</int>
+			<int key="maxID">101</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1506,7 +1479,7 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1280" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -1515,6 +1488,6 @@
 			<string key="buttonSignIn.png">{278, 45}</string>
 			<string key="mail@2x.png">{48, 48}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
